_generated-doc/3.2/config/quarkus-oidc-oidc-tenant-config-authentication.adoc

:summaryTableId: quarkus-oidc-oidc-tenant-config-authentication
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-authentication_configuration]]link:#quarkus-oidc-oidc-tenant-config-authentication_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.response-mode]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.response-mode[quarkus.oidc.authentication.response-mode]`


[.description]
--
Authorization code flow response mode

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_RESPONSE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_RESPONSE_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:query[Authorization response parameters are encoded in the query string added to the redirect_uri], tooltip:form-post[Authorization response parameters are encoded as HTML form values that are auto-submitted in the browser and transmitted via the HTTP POST method using the application/x-www-form-urlencoded content type] 
|`query`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.redirect-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.redirect-path[quarkus.oidc.authentication.redirect-path]`


[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated if 'restorePathAfterRedirect' is set to 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_REDIRECT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_REDIRECT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.restore-path-after-redirect[quarkus.oidc.authentication.restore-path-after-redirect]`


[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application. Note if `redirectPath` property is not set, the original request URI will be restored even if this property is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_RESTORE_PATH_AFTER_REDIRECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_RESTORE_PATH_AFTER_REDIRECT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.remove-redirect-parameters[quarkus.oidc.authentication.remove-redirect-parameters]`


[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_REMOVE_REDIRECT_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_REMOVE_REDIRECT_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.error-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.error-path[quarkus.oidc.authentication.error-path]`


[.description]
--
Relative path to the public endpoint which will process the error response from the OIDC authorization endpoint. If the user authentication has failed then the OIDC provider will return an 'error' and an optional 'error_description' parameters, instead of the expected authorization 'code'. If this property is set then the user will be redirected to the endpoint which can return a user-friendly error description page. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if it is set as '/error' and the current request URI is 'https://localhost:8080/callback?error=invalid_scope' then a redirect will be made to 'https://localhost:8080/error?error=invalid_scope'. If this property is not set then HTTP 401 status will be returned in case of the user authentication failure.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_ERROR_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_ERROR_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.verify-access-token]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.verify-access-token[quarkus.oidc.authentication.verify-access-token]`


[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_VERIFY_ACCESS_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_VERIFY_ACCESS_TOKEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.force-redirect-https-scheme[quarkus.oidc.authentication.force-redirect-https-scheme]`


[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_FORCE_REDIRECT_HTTPS_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_FORCE_REDIRECT_HTTPS_SCHEME+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.scopes]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.scopes[quarkus.oidc.authentication.scopes]`


[.description]
--
List of scopes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.add-openid-scope]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.add-openid-scope[quarkus.oidc.authentication.add-openid-scope]`


[.description]
--
Add the 'openid' scope automatically to the list of scopes. This is required for OpenId Connect providers but will not work for OAuth2 providers such as Twitter OAuth2 which does not accept that scope and throws an error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_ADD_OPENID_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_ADD_OPENID_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.forward-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.forward-params[quarkus.oidc.authentication.forward-params]`


[.description]
--
Request URL query parameters which, if present, will be added to the authentication redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_FORWARD_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_FORWARD_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-force-secure]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-force-secure[quarkus.oidc.authentication.cookie-force-secure]`


[.description]
--
If enabled the state, session and post logout cookies will have their 'secure' parameter set to 'true' when HTTP is used. It may be necessary when running behind an SSL terminating reverse proxy. The cookies will always be secure if HTTPS is used even if this property is set to false.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_FORCE_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_FORCE_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-suffix]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-suffix[quarkus.oidc.authentication.cookie-suffix]`


[.description]
--
Cookie name suffix. For example, a session cookie name for the default OIDC tenant is 'q_session' but can be changed to 'q_session_test' if this property is set to 'test'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path[quarkus.oidc.authentication.cookie-path]`


[.description]
--
Cookie path parameter value which, if set, will be used to set a path parameter for the session, state and post logout cookies. The `cookie-path-header` property, if set, will be checked first.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path-header]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path-header[quarkus.oidc.authentication.cookie-path-header]`


[.description]
--
Cookie path header parameter value which, if set, identifies the incoming HTTP header whose value will be used to set a path parameter for the session, state and post logout cookies. If the header is missing then the `cookie-path` property will be checked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_PATH_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_PATH_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-domain]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-domain[quarkus.oidc.authentication.cookie-domain]`


[.description]
--
Cookie domain parameter value which, if set, will be used for the session, state and post logout cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-same-site]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-same-site[quarkus.oidc.authentication.cookie-same-site]`


[.description]
--
SameSite attribute for the session cookie.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_SAME_SITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_COOKIE_SAME_SITE+++`
endif::add-copy-button-to-env-var[]
-- a|
`strict`, `lax`, `none` 
|`lax`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.allow-multiple-code-flows]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.allow-multiple-code-flows[quarkus.oidc.authentication.allow-multiple-code-flows]`


[.description]
--
If a state cookie is present then a `state` query parameter must also be present and both the state cookie name suffix and state cookie value have to match the value of the `state` query parameter when the redirect path matches the current path. However, if multiple authentications are attempted from the same browser, for example, from the different browser tabs, then the currently available state cookie may represent the authentication flow initiated from another tab and not related to the current request. Disable this property if you would like to avoid supporting multiple authorization code flows running in the same browser.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_ALLOW_MULTIPLE_CODE_FLOWS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_ALLOW_MULTIPLE_CODE_FLOWS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.fail-on-missing-state-param]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.fail-on-missing-state-param[quarkus.oidc.authentication.fail-on-missing-state-param]`


[.description]
--
Fail with the HTTP 401 error if the state cookie is present but no state query parameter is present.

When either multiple authentications are disabled or the redirect URL matches the original request URL, the stale state cookie might remain in the browser cache from the earlier failed redirect to an OpenId Connect provider and be visible during the current request. For example, if Single-page application (SPA) uses XHR to handle redirects to the provider which does not support CORS for its authorization endpoint, the browser will block it and the state cookie created by Quarkus will remain in the browser cache. Quarkus will report an authentication failure when it will detect such an old state cookie but find no matching state query parameter.

Reporting HTTP 401 error is usually the right thing to do in such cases, it will minimize a risk of the browser redirect loop but also can identify problems in the way SPA or Quarkus application manage redirects. For example, enabling `java-script-auto-redirect` or having the provider redirect to URL configured with `redirect-path` may be needed to avoid such errors.

However, setting this property to `false` may help if the above options are not suitable. It will cause a new authentication redirect to OpenId Connect provider. Please be aware doing so may increase the risk of browser redirect loops.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_FAIL_ON_MISSING_STATE_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_FAIL_ON_MISSING_STATE_PARAM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.user-info-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.user-info-required[quarkus.oidc.authentication.user-info-required]`


[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called. This property will be enabled if `quarkus.oidc.roles.source` is `userinfo` or `quarkus.oidc.token.verify-access-token-with-user-info` is `true` or `quarkus.oidc.authentication.id-token-required` is set to `false`, you do not have to enable this property manually in these cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_USER_INFO_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_USER_INFO_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.session-age-extension]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.session-age-extension[quarkus.oidc.authentication.session-age-extension]`


[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_SESSION_AGE_EXTENSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_SESSION_AGE_EXTENSION+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.java-script-auto-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.java-script-auto-redirect[quarkus.oidc.authentication.java-script-auto-redirect]`


[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via JavaScript API such as XMLHttpRequest or Fetch and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since it automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_JAVA_SCRIPT_AUTO_REDIRECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_JAVA_SCRIPT_AUTO_REDIRECT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.id-token-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.id-token-required[quarkus.oidc.authentication.id-token-required]`


[.description]
--
Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token - an internal IdToken will be generated in such cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_ID_TOKEN_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_ID_TOKEN_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.internal-id-token-lifespan]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.internal-id-token-lifespan[quarkus.oidc.authentication.internal-id-token-lifespan]`


[.description]
--
Internal ID token lifespan. This property is only checked when an internal IdToken is generated when Oauth2 providers do not return IdToken.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_INTERNAL_ID_TOKEN_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_INTERNAL_ID_TOKEN_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.pkce-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.pkce-required[quarkus.oidc.authentication.pkce-required]`


[.description]
--
Requires that a Proof Key for Code Exchange (PKCE) is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_PKCE_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_PKCE_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.pkce-secret]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.pkce-secret[quarkus.oidc.authentication.pkce-secret]`


[.description]
--
Secret which will be used to encrypt a Proof Key for Code Exchange (PKCE) code verifier in the code flow state. This secret should be at least 32 characters long.

If this secret is not set, the client secret configured with either `quarkus.oidc.credentials.secret` or `quarkus.oidc.credentials.client-secret.value` will be checked. Finally, `quarkus.oidc.credentials.jwt.secret` which can be used for `client_jwt_secret` authentication will be checked. Client secret will not be used as a PKCE code verifier encryption secret if it is less than 32 characters long.

The secret will be auto-generated if it remains uninitialized after checking all of these properties.

Error will be reported if the secret length is less than 16 characters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_PKCE_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_PKCE_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.extra-params-extra-params[quarkus.oidc.authentication.extra-params]`


[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_AUTHENTICATION_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_AUTHENTICATION_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.response-mode]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.response-mode[quarkus.oidc."tenant".authentication.response-mode]`


[.description]
--
Authorization code flow response mode

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_RESPONSE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_RESPONSE_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:query[Authorization response parameters are encoded in the query string added to the redirect_uri], tooltip:form-post[Authorization response parameters are encoded as HTML form values that are auto-submitted in the browser and transmitted via the HTTP POST method using the application/x-www-form-urlencoded content type] 
|`query`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.redirect-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.redirect-path[quarkus.oidc."tenant".authentication.redirect-path]`


[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated if 'restorePathAfterRedirect' is set to 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_REDIRECT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_REDIRECT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect[quarkus.oidc."tenant".authentication.restore-path-after-redirect]`


[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application. Note if `redirectPath` property is not set, the original request URI will be restored even if this property is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_RESTORE_PATH_AFTER_REDIRECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_RESTORE_PATH_AFTER_REDIRECT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters[quarkus.oidc."tenant".authentication.remove-redirect-parameters]`


[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_REMOVE_REDIRECT_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_REMOVE_REDIRECT_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.error-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.error-path[quarkus.oidc."tenant".authentication.error-path]`


[.description]
--
Relative path to the public endpoint which will process the error response from the OIDC authorization endpoint. If the user authentication has failed then the OIDC provider will return an 'error' and an optional 'error_description' parameters, instead of the expected authorization 'code'. If this property is set then the user will be redirected to the endpoint which can return a user-friendly error description page. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if it is set as '/error' and the current request URI is 'https://localhost:8080/callback?error=invalid_scope' then a redirect will be made to 'https://localhost:8080/error?error=invalid_scope'. If this property is not set then HTTP 401 status will be returned in case of the user authentication failure.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ERROR_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ERROR_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.verify-access-token]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.verify-access-token[quarkus.oidc."tenant".authentication.verify-access-token]`


[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_VERIFY_ACCESS_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_VERIFY_ACCESS_TOKEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme[quarkus.oidc."tenant".authentication.force-redirect-https-scheme]`


[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FORCE_REDIRECT_HTTPS_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FORCE_REDIRECT_HTTPS_SCHEME+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.scopes]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.scopes[quarkus.oidc."tenant".authentication.scopes]`


[.description]
--
List of scopes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.add-openid-scope]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.add-openid-scope[quarkus.oidc."tenant".authentication.add-openid-scope]`


[.description]
--
Add the 'openid' scope automatically to the list of scopes. This is required for OpenId Connect providers but will not work for OAuth2 providers such as Twitter OAuth2 which does not accept that scope and throws an error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ADD_OPENID_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ADD_OPENID_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.extra-params-extra-params[quarkus.oidc."tenant".authentication.extra-params]`


[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.forward-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.forward-params[quarkus.oidc."tenant".authentication.forward-params]`


[.description]
--
Request URL query parameters which, if present, will be added to the authentication redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FORWARD_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FORWARD_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-force-secure]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-force-secure[quarkus.oidc."tenant".authentication.cookie-force-secure]`


[.description]
--
If enabled the state, session and post logout cookies will have their 'secure' parameter set to 'true' when HTTP is used. It may be necessary when running behind an SSL terminating reverse proxy. The cookies will always be secure if HTTPS is used even if this property is set to false.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_FORCE_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_FORCE_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-suffix]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-suffix[quarkus.oidc."tenant".authentication.cookie-suffix]`


[.description]
--
Cookie name suffix. For example, a session cookie name for the default OIDC tenant is 'q_session' but can be changed to 'q_session_test' if this property is set to 'test'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path[quarkus.oidc."tenant".authentication.cookie-path]`


[.description]
--
Cookie path parameter value which, if set, will be used to set a path parameter for the session, state and post logout cookies. The `cookie-path-header` property, if set, will be checked first.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path-header]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path-header[quarkus.oidc."tenant".authentication.cookie-path-header]`


[.description]
--
Cookie path header parameter value which, if set, identifies the incoming HTTP header whose value will be used to set a path parameter for the session, state and post logout cookies. If the header is missing then the `cookie-path` property will be checked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_PATH_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_PATH_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-domain]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-domain[quarkus.oidc."tenant".authentication.cookie-domain]`


[.description]
--
Cookie domain parameter value which, if set, will be used for the session, state and post logout cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-same-site]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-same-site[quarkus.oidc."tenant".authentication.cookie-same-site]`


[.description]
--
SameSite attribute for the session cookie.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_SAME_SITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_COOKIE_SAME_SITE+++`
endif::add-copy-button-to-env-var[]
-- a|
`strict`, `lax`, `none` 
|`lax`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.allow-multiple-code-flows]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.allow-multiple-code-flows[quarkus.oidc."tenant".authentication.allow-multiple-code-flows]`


[.description]
--
If a state cookie is present then a `state` query parameter must also be present and both the state cookie name suffix and state cookie value have to match the value of the `state` query parameter when the redirect path matches the current path. However, if multiple authentications are attempted from the same browser, for example, from the different browser tabs, then the currently available state cookie may represent the authentication flow initiated from another tab and not related to the current request. Disable this property if you would like to avoid supporting multiple authorization code flows running in the same browser.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ALLOW_MULTIPLE_CODE_FLOWS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ALLOW_MULTIPLE_CODE_FLOWS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.fail-on-missing-state-param]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.fail-on-missing-state-param[quarkus.oidc."tenant".authentication.fail-on-missing-state-param]`


[.description]
--
Fail with the HTTP 401 error if the state cookie is present but no state query parameter is present.

When either multiple authentications are disabled or the redirect URL matches the original request URL, the stale state cookie might remain in the browser cache from the earlier failed redirect to an OpenId Connect provider and be visible during the current request. For example, if Single-page application (SPA) uses XHR to handle redirects to the provider which does not support CORS for its authorization endpoint, the browser will block it and the state cookie created by Quarkus will remain in the browser cache. Quarkus will report an authentication failure when it will detect such an old state cookie but find no matching state query parameter.

Reporting HTTP 401 error is usually the right thing to do in such cases, it will minimize a risk of the browser redirect loop but also can identify problems in the way SPA or Quarkus application manage redirects. For example, enabling `java-script-auto-redirect` or having the provider redirect to URL configured with `redirect-path` may be needed to avoid such errors.

However, setting this property to `false` may help if the above options are not suitable. It will cause a new authentication redirect to OpenId Connect provider. Please be aware doing so may increase the risk of browser redirect loops.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FAIL_ON_MISSING_STATE_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_FAIL_ON_MISSING_STATE_PARAM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.user-info-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.user-info-required[quarkus.oidc."tenant".authentication.user-info-required]`


[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called. This property will be enabled if `quarkus.oidc.roles.source` is `userinfo` or `quarkus.oidc.token.verify-access-token-with-user-info` is `true` or `quarkus.oidc.authentication.id-token-required` is set to `false`, you do not have to enable this property manually in these cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_USER_INFO_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_USER_INFO_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.session-age-extension]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.session-age-extension[quarkus.oidc."tenant".authentication.session-age-extension]`


[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_SESSION_AGE_EXTENSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_SESSION_AGE_EXTENSION+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.java-script-auto-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.java-script-auto-redirect[quarkus.oidc."tenant".authentication.java-script-auto-redirect]`


[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via JavaScript API such as XMLHttpRequest or Fetch and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since it automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_JAVA_SCRIPT_AUTO_REDIRECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_JAVA_SCRIPT_AUTO_REDIRECT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.id-token-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.id-token-required[quarkus.oidc."tenant".authentication.id-token-required]`


[.description]
--
Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token - an internal IdToken will be generated in such cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ID_TOKEN_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_ID_TOKEN_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.internal-id-token-lifespan]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.internal-id-token-lifespan[quarkus.oidc."tenant".authentication.internal-id-token-lifespan]`


[.description]
--
Internal ID token lifespan. This property is only checked when an internal IdToken is generated when Oauth2 providers do not return IdToken.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_INTERNAL_ID_TOKEN_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_INTERNAL_ID_TOKEN_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.pkce-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.pkce-required[quarkus.oidc."tenant".authentication.pkce-required]`


[.description]
--
Requires that a Proof Key for Code Exchange (PKCE) is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_PKCE_REQUIRED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_PKCE_REQUIRED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.pkce-secret]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.pkce-secret[quarkus.oidc."tenant".authentication.pkce-secret]`


[.description]
--
Secret which will be used to encrypt a Proof Key for Code Exchange (PKCE) code verifier in the code flow state. This secret should be at least 32 characters long.

If this secret is not set, the client secret configured with either `quarkus.oidc.credentials.secret` or `quarkus.oidc.credentials.client-secret.value` will be checked. Finally, `quarkus.oidc.credentials.jwt.secret` which can be used for `client_jwt_secret` authentication will be checked. Client secret will not be used as a PKCE code verifier encryption secret if it is less than 32 characters long.

The secret will be auto-generated if it remains uninitialized after checking all of these properties.

Error will be reported if the secret length is less than 16 characters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__AUTHENTICATION_PKCE_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__AUTHENTICATION_PKCE_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
